maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:36: error: '(' expected but identifier found.
	if isDirectionFree()
           ^